--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
                         </span>                     
                     </a>
                 </div>
+		<div class="col-md-4" style="margin: 10px 0px;">
+                    <a href="assets/tugas/Kalkulator/index.html" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/kalkulator.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Tugas 4</h5>
+                                <p class="font-weight-normal">Membuat Game Snake</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
                 <div class="col-md-4" style="margin: 10px 0px;">
                     <a href="assets/tugas/Introduction to HTML.pdf" class="portfolio-card">
                         <img src="assets/tugas/Introduction to HTML.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
