--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
                         </span>                     
                     </a>
                 </div>
+		<div class="col-md-4" style="margin: 10px 0px;">
+                    <a href="assets/tugas/JavaScript intermediate.pdf" class="portfolio-card">
+                        <img src="assets/tugas/JavaScript intermediate.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Sertifikat JavaScript Intermediate</h4>
+                                <p class="font-weight-normal">Sertifikat Sololearn</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
