--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
                     </a>
                 </div>
 		<div class="col-md-4" style="margin: 10px 0px;">
+                    <a href="https://agusrahmawan122.github.io/agus-rahmawan_05tplp007/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/uts.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Tugas UTS</h5>
+                                <p class="font-weight-normal">Membuat Dashboard Admin</p>
+                            </span>                         
+                        </span>                         
+                    </a>
+                </div>
+		<div class="col-md-4" style="margin: 10px 0px;">
                     <a href="https://agusrahmawan122.github.io/game-snake/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/snake.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
                         <span class="portfolio-card-overlay">
