--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
         <div class="container text-center">
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
+		<h2>Lokasi Saya</h2>
+		<!-- Google Maps Embed -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15861.469411124008!2d106.691578!3d-6.3464540000000005!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1736145007121!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
             <!-- contact form -->
             <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
