--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
 	<link rel="stylesheet" href="assets/css/meyawo.css">
+	<style type="text/css">
+        .category {
+                padding: 20px 10px;
+        }
+        .category button {
+            padding: 10px 20px;
+            border: 2px solid #695aa6;
+            color: #695aa6;
+            background: white;
+            border-radius: 25px;
+        }
+        .category button:hover {
+            background: #695aa6;
+            color: white;
+        }
+    </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -78,10 +94,16 @@
     <section class="section" id="portfolio">
         <div class="container text-center">
             <p class="section-subtitle">What I Did ?</p>
-            <h6 class="section-title mb-6">Portfolio</h6>
+            <h6 class="section-title" style="margin-bottom: 10px;">Portfolio</h6>
+	    <div class="category">
+                <button id="all" onclick="showAll()" style="background: ">All</button>
+                <button id="sertifikat" onclick="showSertifikat()">Sertifikat</button>
+                <button id="tugas" onclick="showTugas()">Tugas</button>
+                <button id="uts" onclick="showUts()">UTS</button>
+            </div>
             <!-- row -->
             <div class="row">
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all tugas" style="margin: 10px 0px;">
                     <a href="assets/tugas/login/index.html" class="portfolio-card">
                         <img src="assets/imgs/login.png" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -92,7 +114,7 @@
                         </span>                     
                     </a>
                 </div>
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all tugas" style="margin: 10px 0px;">
                     <a href="assets/tugas/Kalkulator/index.html" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/kalkulator.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
                         <span class="portfolio-card-overlay">
@@ -103,7 +125,7 @@
                         </span>                         
                     </a>
                 </div>
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all tugas" style="margin: 10px 0px;">
                     <a href="assets/tugas/dasboard/index.html" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/dash.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -114,7 +136,7 @@
                         </span>                     
                     </a>
                 </div>
-		<div class="col-md-4" style="margin: 10px 0px;">
+		<div class="col-md-4 portfolio-item all uts" style="margin: 10px 0px;">
                     <a href="https://agusrahmawan122.github.io/agus-rahmawan_05tplp007/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/uts.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
                         <span class="portfolio-card-overlay">
@@ -125,7 +147,7 @@
                         </span>                         
                     </a>
                 </div>
-		<div class="col-md-4" style="margin: 10px 0px;">
+		<div class="col-md-4 portfolio-item all tugas" style="margin: 10px 0px;">
                     <a href="https://agusrahmawan122.github.io/game-snake/" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/snake.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
                         <span class="portfolio-card-overlay">
@@ -136,7 +158,7 @@
                         </span>                         
                     </a>
                 </div>
-		<div class="col-md-4" style="margin: 10px 0px;">
+		<div class="col-md-4 portfolio-item all tugas" style="margin: 10px 0px;">
                     <a href="assets/tugas/dashboard_penjualan.html" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/dashpenjualan.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">
                         <span class="portfolio-card-overlay">
@@ -147,7 +169,7 @@
                         </span>                         
                     </a>
                 </div>
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all sertifikat" style="margin: 10px 0px;">
                     <a href="assets/tugas/Introduction to HTML.pdf" class="portfolio-card">
                         <img src="assets/tugas/Introduction to HTML.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -158,7 +180,7 @@
                         </span>                     
                     </a>
                 </div>
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all sertifikat" style="margin: 10px 0px;">
                     <a href="assets/tugas/Introduction to CSS.pdf" class="portfolio-card">
                         <img src="assets/tugas/Introduction to CSS.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -169,7 +191,7 @@
                         </span>                     
                     </a>
                 </div>
-                <div class="col-md-4" style="margin: 10px 0px;">
+                <div class="col-md-4 portfolio-item all sertifikat" style="margin: 10px 0px;">
                     <a href="assets/tugas/Introduction to JavaScript.pdf" class="portfolio-card">
                         <img src="assets/tugas/Introduction to JavaScript.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -180,7 +202,7 @@
                         </span>                     
                     </a>
                 </div>
-		<div class="col-md-4" style="margin: 10px 0px;">
+		<div class="col-md-4 portfolio-item all sertifikat" style="margin: 10px 0px;">
                     <a href="assets/tugas/JavaScript intermediate.pdf" class="portfolio-card">
                         <img src="assets/tugas/JavaScript intermediate.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" width="100%" height="400px">    
                         <span class="portfolio-card-overlay">
@@ -211,11 +233,9 @@
     <section class="section" id="contact">
         <div class="container text-center">
             <p class="section-subtitle">How can you communicate?</p>
-            <h6 class="section-title mb-5">Contact Me</h6>
 		<h2>Lokasi Saya</h2>
-		<!-- Google Maps Embed -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15861.469411124008!2d106.691578!3d-6.3464540000000005!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1736145007121!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15861.469411124008!2d106.691578!3d-6.3464540000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e5a6e26dc3cd%3A0xccd6344b8021119d!2sUniversitas%20Pamulang%20Kampus%202%20(UNPAM%20Viktor)!5e0!3m2!1sid!2sid!4v1736146535615!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
             <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
@@ -261,5 +281,55 @@
     <!-- Meyawo js -->
     <script src="assets/js/meyawo.js"></script>
 
+    <script type="text/javascript">
+        function showAll() {
+    // Menampilkan semua item
+    const items = document.querySelectorAll('.portfolio-item');
+    items.forEach(item => {
+        item.style.display = 'block';
+    });
+	}
+	
+	function showSertifikat() {
+	    // Menyembunyikan semua item
+	    const items = document.querySelectorAll('.portfolio-item');
+	    items.forEach(item => {
+	        item.style.display = 'none';
+	    });
+	
+	    // Menampilkan hanya item dengan kelas 'sertifikat'
+	    const sertifikatItems = document.querySelectorAll('.portfolio-item.sertifikat');
+	    sertifikatItems.forEach(item => {
+	        item.style.display = 'block';
+	    });
+	}
+
+	    function showTugas() {
+	    // Menyembunyikan semua item
+	    const items = document.querySelectorAll('.portfolio-item');
+	    items.forEach(item => {
+	        item.style.display = 'none';
+	    });
+	
+	    // Menampilkan hanya item dengan kelas 'sertifikat'
+	    const sertifikatItems = document.querySelectorAll('.portfolio-item.tugas');
+	    sertifikatItems.forEach(item => {
+	        item.style.display = 'block';
+	    });
+	}
+	    function showUts() {
+	    // Menyembunyikan semua item
+	    const items = document.querySelectorAll('.portfolio-item');
+	    items.forEach(item => {
+	        item.style.display = 'none';
+	    });
+	
+	    // Menampilkan hanya item dengan kelas 'sertifikat'
+	    const sertifikatItems = document.querySelectorAll('.portfolio-item.uts');
+	    sertifikatItems.forEach(item => {
+	        item.style.display = 'block';
+	    });
+	}
+    </script>
 </body>
 </html>
