--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             background: #695aa6;
             color: white;
         }
+	.category button:active {
+	    border: 2px solid #695aa6;
     </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
